--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.application.name=product-services
 server.port=5050
 
 # JDBC properties
-spring.datasource.url=jdbc:mysql://localhost:3306/employee_directory
-spring.datasource.username=springstudent
-spring.datasource.password=springstudent
+spring.datasource.url=jdbc:mysql://localhost:3306/productdb
+spring.datasource.username=root
+spring.datasource.password=root
 spring.jpa.hibernate.ddl-auto=update
