--- a/pom.xml
+++ b/pom.xml
@@ -63,6 +63,10 @@
 			<artifactId>mysql-connector-java</artifactId>
 			<version>8.0.32</version> <!-- or the version you need -->
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-webflux</artifactId>
+		</dependency>
 
 	</dependencies>
 
